# forge

./: .github-release-notes.md  .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  package-lock.json  package.json  vitest.config.ts
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1-UAT.md  v1.0-v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/quick/: 01-cleanup-PLAN.md  03-commit-planning-PLAN.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
coverage/: coverage-final.json  index.html
coverage/commands/: analyze.ts.html  bootstrap.ts.html  index.html  install-assistants.ts.html  install-copilot.ts.html  plan.ts.html
coverage/config/: analysis.ts.html  index.html  planning.ts.html  sidecar.ts.html
docs/: adding-skill-agent-template.md  releasing.md
forge/: README.md  pyproject.toml
forge/docs/assistant/: playbook.md
forge/examples/: example_discussion_run.py
forge/forge/: __init__.py
forge/forge/agents/: __init__.py  base.py
forge/forge/agents/discussions/: __init__.py  agent.py
forge/forge/core/: __init__.py  categorization.py  orchestration.py  signal.py
forge/scripts/assistant/: collect_context.py
scripts/: release-local.mjs  setup-branch-protection.sh
src/: cli.ts  program.ts
(+201 files in other folders)
