[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-framework"
version = "0.1.0"
description = "FORGE: AI agents for repository intelligence and execution"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "FORGE Contributors" }
]
dependencies = []

[tool.setuptools]
packages = ["forge", "forge.core", "forge.agents", "forge.agents.discussions"]
